# ndk-arm32

./: README.md
ndk/: README.md
ndk/archives/: README.md  libjansi.tar.xz
ndk/build-app/: README.md
ndk/openjdk-build/: README.md
ndk/openjdk-build/tls-test/: CMakeLists.txt  JavaThread.h  build.sh  main.cpp  thread.cpp  thread.h  threadLS_linux_aarch64.s
ndk/patches/: android.toolchain.cmake.patch  base_builders.py.patch  build-binary.mk.patch  builders.py.patch  configs.py.patch  default.xml.patch  do_build.py.patch  (+5 more)
ndk/renderscript/: CMakeLists.txt  build.sh
ndk/renderscript/libbcc/: Android.bp  CMakeLists.txt
ndk/renderscript/libbcc/bcinfo/: Android.bp  CMakeLists.txt
ndk/renderscript/libbcc/bcinfo/BitReader_2_7/: CMakeLists.txt
ndk/renderscript/libbcc/bcinfo/BitReader_3_0/: CMakeLists.txt
ndk/renderscript/libbcc/bcinfo/Wrap/: CMakeLists.txt
ndk/renderscript/libbcc/bcinfo/tools/: CMakeLists.txt
ndk/renderscript/libbcc/lib/: Android.bp  CMakeLists.txt
ndk/renderscript/libbcc/tools/: CMakeLists.txt
ndk/renderscript/libbcc/tools/bcc_compat/: CMakeLists.txt
ndk/renderscript/liblog/: CMakeLists.txt
ndk/renderscript/liblog/include/android-base/: errno_restorer.h  macros.h
ndk/renderscript/liblog/include/cutils/: list.h
ndk/renderscript/liblog/include/private/: android_filesystem_config.h
ndk/renderscript/liblog/include/system/: graphics.h  thread_defs.h
ndk/renderscript/liblog/include/utils/: Errors.h  FastStrcmp.h  RWLock.h  ThreadDefs.h
ndk/renderscript/rs/: Android.bp
ndk/renderscript/slang/: Android.bp  CMakeLists.txt  RSCCOptions.inc  llvm-rs-cc.cpp  rs_cc_options.cpp  rs_cc_options.h
ndk/renderscript/slang/BitWriter_2_9/: CMakeLists.txt
ndk/renderscript/slang/BitWriter_2_9_func/: CMakeLists.txt
ndk/renderscript/slang/BitWriter_3_2/: CMakeLists.txt
ndk/renderscript/slang/StripUnkAttr/: CMakeLists.txt
sdk-tools/: CMakeLists.txt  README.md
sdk-tools/android-11/: README.md
sdk-tools/cmake/: CMakeLists.txt
sdk-tools/cmake/aapt/: CMakeLists.txt
sdk-tools/cmake/aapt2/: CMakeLists.txt
sdk-tools/cmake/aidl/: CMakeLists.txt
sdk-tools/cmake/dexdump/: CMakeLists.txt
sdk-tools/cmake/lib/: CMakeLists.txt
sdk-tools/cmake/lib/androidfw/: CMakeLists.txt
sdk-tools/cmake/lib/boringssl/: CMakeLists.txt  CMakeLists_new.txt  build.sh
sdk-tools/cmake/lib/compiler-rt/: CMakeLists.txt
sdk-tools/cmake/lib/fmtlib/: CMakeLists.txt
sdk-tools/cmake/lib/libartbase/: CMakeLists.txt
sdk-tools/cmake/lib/libartpalette/: CMakeLists.txt
sdk-tools/cmake/lib/libbase/: CMakeLists.txt
sdk-tools/cmake/lib/libbrotli/: CMakeLists.txt
sdk-tools/cmake/lib/libcpu_features/: CMakeLists.txt
sdk-tools/cmake/lib/libcrypto_utils/: CMakeLists.txt
sdk-tools/cmake/lib/libdexfile/: CMakeLists.txt
sdk-tools/cmake/lib/libdiagnose_usb/: CMakeLists.txt
sdk-tools/cmake/lib/libext4_utils/: CMakeLists.txt
sdk-tools/cmake/lib/libincfs/: CMakeLists.txt
sdk-tools/cmake/lib/liblog/: CMakeLists.txt
sdk-tools/cmake/lib/liblp/: CMakeLists.txt
sdk-tools/cmake/lib/liblz4/: CMakeLists.txt
sdk-tools/cmake/lib/libpackagelistparser/: CMakeLists.txt
sdk-tools/cmake/lib/libpcre2/: CMakeLists.txt
sdk-tools/cmake/lib/libselinux/: CMakeLists.txt
sdk-tools/cmake/lib/libsepol/: CMakeLists.txt
sdk-tools/cmake/lib/libsparse/: CMakeLists.txt
sdk-tools/cmake/lib/libusb/: CMakeLists.txt
sdk-tools/cmake/lib/libziparchive/: CMakeLists.txt
sdk-tools/cmake/lib/libzopfli/: CMakeLists.txt
sdk-tools/cmake/lib/libzstd/: CMakeLists.txt
sdk-tools/cmake/lib/mdnsresponder/: CMakeLists.txt
sdk-tools/cmake/lib/protobuf/: CMakeLists.txt
sdk-tools/cmake/lib/zlib/: CMakeLists.txt
sdk-tools/cmake/platform-tools/: CMakeLists.txt
sdk-tools/cmake/platform-tools/adb/: CMakeLists.txt
sdk-tools/cmake/platform-tools/adb/deployagent/: CMakeLists.txt
sdk-tools/cmake/platform-tools/adb/libadb_crypto/: CMakeLists.txt
sdk-tools/cmake/platform-tools/adb/libadb_pairing_auth/: CMakeLists.txt
sdk-tools/cmake/platform-tools/adb/libadb_pairing_connection/: CMakeLists.txt
sdk-tools/cmake/platform-tools/adb/libadb_protos/: CMakeLists.txt
sdk-tools/cmake/platform-tools/adb/libadb_sysdeps/: CMakeLists.txt
sdk-tools/cmake/platform-tools/adb/libadb_tls_connection/: CMakeLists.txt
sdk-tools/cmake/platform-tools/adb/libfastdeploy_host/: CMakeLists.txt
sdk-tools/cmake/platform-tools/dmtracedump/: CMakeLists.txt
sdk-tools/cmake/platform-tools/e2fsprogs/: CMakeLists.txt
sdk-tools/cmake/platform-tools/e2fsprogs/e2fsdroid/: CMakeLists.txt
sdk-tools/cmake/platform-tools/e2fsprogs/libext2_blkid/: CMakeLists.txt
sdk-tools/cmake/platform-tools/e2fsprogs/libext2_com_err/: CMakeLists.txt
sdk-tools/cmake/platform-tools/e2fsprogs/libext2_e2p/: CMakeLists.txt
sdk-tools/cmake/platform-tools/e2fsprogs/libext2_quota/: CMakeLists.txt
sdk-tools/cmake/platform-tools/e2fsprogs/libext2_uuid/: CMakeLists.txt
sdk-tools/cmake/platform-tools/e2fsprogs/libext2fs/: CMakeLists.txt
sdk-tools/cmake/platform-tools/e2fsprogs/mke2fs/: CMakeLists.txt
sdk-tools/cmake/platform-tools/etc1tool/: CMakeLists.txt
sdk-tools/cmake/platform-tools/f2fs-tools/: CMakeLists.txt
sdk-tools/cmake/platform-tools/fastboot/: CMakeLists.txt
sdk-tools/cmake/platform-tools/hprof-conv/: CMakeLists.txt
sdk-tools/cmake/platform-tools/sqlite3/: CMakeLists.txt
sdk-tools/cmake/platform-tools/sqlite3/libandroidicu/: CMakeLists.txt
sdk-tools/cmake/platform-tools/sqlite3/libandroidicuinit/: CMakeLists.txt
sdk-tools/cmake/platform-tools/sqlite3/libicudata/: CMakeLists.txt
sdk-tools/cmake/platform-tools/sqlite3/libicui18n/: CMakeLists.txt
sdk-tools/cmake/platform-tools/sqlite3/libicuuc/: CMakeLists.txt
sdk-tools/cmake/split-select/: CMakeLists.txt
sdk-tools/cmake/zipalign/: CMakeLists.txt
sdk-tools/patches/: adb.cpp.patch  aidl_language_l.ll.patch  avb_sysdeps.h.patch  cgrouprc.h.patch  dex_file.cc.patch  fastboot.cpp.patch  instruction_set.h.patch  log.h.patch  mem_map.cc.patch  pairing_auth.h.patch  pairing_connection.h.patch  uconfig_local.h.patch  utypes.h.patch  xmlparse.c.patch
(+14 files in other folders)
